samples/_failures_safe/1761496443_d55db7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9325e5a7.c: In function ‘main’:
./samples/SAFE/__tmp_9325e5a7.c:141:5: error: expected expression at end of input
  141 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_9325e5a7.c:141:5: error: expected declaration or statement at end of input
